name:                bytestring-storable
version:             0.1.0.0
synopsis:            Extract Storable types from a ByteString.
license:             MIT
license-file:        LICENSE
author:              Niklas Larsson
maintainer:          niklas@mm.st
copyright:           (c) Niklas Larsson
category:            Data
build-type:          Simple
cabal-version:       >=1.8
library
  exposed-modules:      Data.ByteString.Storable  
  build-depends:        base >= 4.5,
                        bytestring
  hs-source-dirs:       src 


